# Air-Combat

./: .gitignore  CMakeLists.txt  COMMENTS_SUMMARY.md  COMPLETE_GUIDE.md  FRAMEWORK_SUMMARY.md  GETTING_STARTED.md  GuideBook.md  INDEX.md  PROJECT_STATUS.md  READING_GUIDE.md  README.md  SETUP.md
.github/: copilot-instructions.md
.github/workflows/: build-release.yml
docs/: 02-框架概览.md  API文档.md  README.md  实现指南.md  快速参考.md
src/: main.cpp
src/core/: core.cpp  core.h  info.cpp  info.h  main.cpp
src/game_object/: README.md  bullet.cpp  bullet.h  enemy.cpp  enemy.h  player.cpp  player.h
src/input/: input.cpp  input.h
src/resource/: resource.cpp  resource.h
src/scene/: README.md  scene.cpp  scene.h  scene1.cpp  scene1.h  scene2.cpp  scene2.h
src/ui/: button.cpp  button.h  hud.cpp  hud.h
src/util/: config.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  type.h  util.cpp  util.h
